--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
     // 日替わりのコンテンツを配列に用意
     const contents = [
       { title: "今日の豆知識", content: "パソコンのF7キーはカタカナに変換します。" },
-      { title: "今日の名言", content: "『最も成功する人は、常に学び続ける人である』" },
+      { title: "今日の名言", content: "『小さな成功を積み重ねることが、大きな変化を生む』マハトマ・ガンジー" },
       { title: "おみくじ", content: "大吉！今日は素晴らしい日です。" },
-      { title: "今日の紅茶", content: "カモミールティー - リラックス効果があります。" }
-    ];
+      { title: "今日の紅茶", content: "カモミールティー - リラックス効果があります。" },
+      { title: "今日の名言", content: "『すべての成功は、情熱と忍耐の結果である』ジョン・ドライデン" },
+    　{ title: "今日の名言", content: "『道に迷うことは、新しい道を見つけるチャンスだ』アラン・ワッツ" }
+    
+  　];
 
     // 今日の日付を取得
     const date = new Date();
