--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       { title: "今日のことわざ", content: "「雲の向こうはいつも青空」インド" },
       { title: "今日のことわざ", content: "「強い風は、強い木を育てる」ギリシャ" },
       { title: "今日のことわざ", content: "「言葉は銀、沈黙は金」ブラジル" },
-      { title: "今日のことわざ", content: "「ゆっくりと急げ」フィンランド" },
+      { title: "今日のことわざ", content: "「ゆっくりと急げ」フィンランド" }
         ];
 
     // 今日の日付を取得
