--- a/index.html
+++ b/index.html
@@ -89,30 +89,4 @@
       { title: "今日の名言", content: "『小さな成功を積み重ねることが、大きな変化を生む』 - マハトマ・ガンジー" },
       { title: "おみくじ", content: "大吉！今日は素晴らしい日です。" },
       { title: "今日の豆知識", content: "カモミールティー - リラックスしたい夜におすすめ。心を落ち着ける効果があります。" },
-      { title: "今日の名言", content: "『すべての成功は、情熱と忍耐の結果である』 - ジョン・ドライデン" },
-      { title: "今日の名言", content: "『道に迷うことは、新しい道を見つけるチャンスだ』 - アラン・ワッツ" },
-      { title: "今日の名言", content: "『暗い夜が続いても、必ず朝日は昇る。』 - ラプンツェル（塔の上のラプンツェル）" },
-      { title: "今日の名言", content: "『失敗を恐れちゃいけないよ。何度でもやり直せばいいんだ。』 - ミッキーマウス" },
-      { title: "今日の名言", content: "『笑顔でいれば、人生はもっと楽しくなるよ。』 - ドリー（ファインディング・ニモ）" },
-      { title: "今日の名言", content: "『新しい夢を持つのは楽しいな。』 - ジャック・スケリントン（ナイトメアー・ビフォア・クリスマス）" },
-      { title: "今日の名言", content: "『星に願いをかけるだけでなく、自分の力で夢を叶えよう。』 - ティアナ（プリンセスと魔法のキス）" },
-      { title: "今日の名言", content: "『自分の心を信じること。それが一番大切なんだ。』 - ピーターパン（ピーターパン）" },
-      { title: "今日の名言", content: "『本当の強さは、優しさを持つことなんだ。』 - ジュディ（ズートピア）" },
-      { title: "今日の名言", content: "『暗闇の向こうには、必ず光が待っている。』 - メリダ（メリダとおそろしの森）" },
-      { title: "今日の名言", content: "『どんな困難も、やがて花を咲かせるよ』 - バンビ（バンビ）" },
-      { title: "今日の名言", content: "『あなたの中には、素晴らしい力が眠っているの』 - アースラ（リトル・マーメイド）" },
-      { title: "今日の名言", content: "『限界は、自分で決めるものじゃない』 - ムーラン（ムーラン）" },
-      { title: "今日の名言", content: "『前進をしない人は、後退しているのだ』 - ヨハン・ヴォルフガング・フォン・ゲーテ" },
-      { title: "今日の名言", content: "『我々は自らの行動の価値を最大化するため努力すべきだ。』 - スティーブン・ホーキング" },
-      { title: "今日の名言", content: "『経験を賢く生かすならば、何事も無駄ではない。』 - オーギュスト・ロダン" },
-      { title: "今日の名言", content: "『ちょっとした笑顔が可能にするすべての良いことを私たちは知らない』 - マザー・テレサ" },
-      { title: "今日の名言", content: "『何にもまして重要なのは、あなた自身を敬うことだ』 - ピタゴラス" },
-      { title: "今日の豆知識", content: "アールグレイティー - ベルガモットの香りが特徴的で、リラックス効果があります。" },
-      { title: "今日の豆知識", content: "ダージリンティー - 「紅茶のシャンパン」とも呼ばれ、繊細な香りが楽しめます。爽やかな風味が特徴です。" },
-      { title: "今日の豆知識", content: "ルイボスティー - 抗酸化作用が豊富で、美容にも効果が期待されます。ノンカフェインなので寝る前にも安心です。" },
-      { title: "今日の豆知識", content: "黒豆茶 - 豊富なポリフェノールが血行促進に効果的で、美容と健康に良いとされています。" },
-      { title: "今日の豆知識", content: "オリーブオイルは光に弱いため、冷暗所に保存すると品質が長持ちします。" },
-      { title: "今日の豆知識", content: "蜂蜜は腐らない食品として知られており、古代エジプトの蜂蜜が今でも食べられる状態で発見されています。" },
-      { title: "今日の豆知識", content: "タコには3つの心臓があり、1つは体全体、残り2つはえらに血液を送ります。" },
-      { title: "今日の豆知識", content: "笑うと免疫力が上がると言われています。笑うことで体内のストレスホルモンが減少するためです" },
-　　  { title: "
+      { title: "今日の名言", content: "『すべての成功は、情熱と忍耐の結果である』 - ジョン・ドラ
